@@ -13,7 +13,11 @@ Release ...
   of zero are now completely ignored. They could previously overwrite a
   previous positioning difference for the same pair. Also if a kerning
   pair occurs more than once in the metrics file, the first definition
-  is now used instead of the last one.
+  read is now used instead of the last one.
+* troff: In an OpenType font, if a kerning pair occurs in both a "Pair
+  Positioning Adjustment" format 1 (kerning by specific glyphs) and a
+  format 2 (kerning by glyph classes) table, the format 1 definition
+  is now always used.
 * tbl: Storage space expansions because of long lines inside a table are
   now done properly.
 * troff: The "\n[.ascender]" and "\n[.descender]" registers contain the
